xc/programs/Xserver/Imakefile xc/programs/Xserver/Xprint/DiPrint.h xc/programs/Xserver/Xprint/Imakefile xc/programs/Xserver/Xprint/Init.c xc/programs/Xserver/Xprint/ddxInit.c xc/programs/Xserver/dix/Imakefile xc/programs/Xserver/dix/main.c xc/programs/Xserver/dix/xpstubs.c xc/programs/Xserver/os/Imakefile //bugs.freedesktop.org/show_bug.cgi?id=2792) attachment #2193     (https://bugs.freedesktop.org/attachment.cgi?id=2193) Fix build bustage     when |PrintOnlyServer| is set to |NO|. Patch by Roland Mainz     <roland.mainz@nrubsig.org> and Julien Lafon <julien.lafon@gmail.com>.